# controller/admin/admin.go
@@ -1,13 +1,14 @@
 package admin
 
 import (
-    "fmt"
-    "vesaliusm/database"
-    "vesaliusm/middleware"
-    adminUserService "vesaliusm/service/adminUser"
-    "vesaliusm/utils"
+	"fmt"
+	"strconv"
+	"vesaliusm/database"
+	"vesaliusm/middleware"
+	adminUserService "vesaliusm/service/adminUser"
+	"vesaliusm/utils"
 
-    "github.com/gofiber/fiber/v3"
+	"github.com/gofiber/fiber/v3"
 )
 
 var adminUserSvc *adminUserService.AdminUserService = adminUserService.NewAdminUserService(database.GetDb(), database.GetCtx())
@@ -22,6 +23,7 @@ var adminUserSvc *adminUserService.AdminUserService = adminUserService.NewAdminU
 func GetAdmin(c fiber.Ctx) error {
     _, user, err := middleware.ValidateAdminToken(c)
     if err != nil {
+        utils.LogInfo("error here")
         return err
     }
 
@@ -62,7 +64,7 @@ func GetAllAdmin(c fiber.Ctx) error {
 // @Security BearerAuth
 // @Param        _page             query       string  false  "_page"  default:"1"
 // @Param        _limit            query       string  false  "_limit" default:"10"
-// @Param        keyword           body        string  false  "Keyword"
+// @Param        keyword           body        dto.SearchKeywordDto  false  "Search"
 // @Success 200 {array} model.AdminUser
 // @Router /admin/all [post]
 func SearchAllAdmin(c fiber.Ctx) error {
@@ -120,8 +122,7 @@ func GetAllAuditMobileUser(c fiber.Ctx) error {
 // @Security BearerAuth
 // @Param        _page             query       string  false  "_page"  default:"1"
 // @Param        _limit            query       string  false  "_limit" default:"10"
-// @Param        keyword           body        string  false  "Keyword"
-// @Param        keyword2          body        string  false  "Keyword2"
+// @Param        keyword           body        dto.SearchKeyword2Dto  false  "Search"
 // @Success 200 {array} model.MobileUserAuditLog
 // @Router /admin/adminportal/mobile-user/log/all [post]
 func SearchAllAuditMobileUser(c fiber.Ctx) error {
@@ -157,4 +158,94 @@ func SearchAllAuditMobileUser(c fiber.Ctx) error {
     c.Set(utils.X_TOTAL_COUNT, fmt.Sprintf("%d", m.Total))
     c.Set(utils.X_TOTAL_PAGE, fmt.Sprintf("%d", m.TotalPages))
     return c.JSON(m.List)
+}
+
+// GetAllAuditLog
+//
+// @Tags Admin
+// @Produce json
+// @Security BearerAuth
+// @Param        _page             query       string  false  "_page"  default:"1"
+// @Param        _limit            query       string  false  "_limit" default:"10"
+// @Success 200 {array} model.AdminAuditLog
+// @Router /admin/adminportal/log/all [get]
+func GetAllAuditLog(c fiber.Ctx) error {
+    page := c.Query("_page", "1")
+    limit := c.Query("_limit", "10")
+    m, err := adminUserSvc.ListAuditLog(page, limit)
+    if err != nil {
+        return err
+    }
+
+    c.Set(utils.X_TOTAL_COUNT, fmt.Sprintf("%d", m.Total))
+    c.Set(utils.X_TOTAL_PAGE, fmt.Sprintf("%d", m.TotalPages))
+    return c.JSON(m.List)
+}
+
+// SearchAllAuditLog
+//
+// @Tags Admin
+// @Produce json
+// @Security BearerAuth
+// @Param        _page             query       string  false  "_page"  default:"1"
+// @Param        _limit            query       string  false  "_limit" default:"10"
+// @Param        keyword           body        dto.SearchKeyword2Dto  false  "Search"
+// @Success 200 {array} model.AdminAuditLog
+// @Router /admin/adminportal/log/all [post]
+func SearchAllAuditLog(c fiber.Ctx) error {
+    var data fiber.Map
+    if err := c.Bind().Body(&data); err != nil {
+        return err
+    }
+
+    var (
+        key  string
+        key2 string
+    )
+    if keyword, ok := data["keyword"]; ok {
+        key = keyword.(string)
+        if key != "" {
+            key = "%" + key + "%"
+        }
+    }
+    if keyword, ok := data["keyword2"]; ok {
+        key2 = keyword.(string)
+        if key2 != "" {
+            key2 = "%" + key2 + "%"
+        }
+    }
+
+    page := c.Query("_page", "1")
+    limit := c.Query("_limit", "10")
+    m, err := adminUserSvc.ListAuditByKeyword(key, key2, page, limit)
+    if err != nil {
+        return err
+    }
+
+    c.Set(utils.X_TOTAL_COUNT, fmt.Sprintf("%d", m.Total))
+    c.Set(utils.X_TOTAL_PAGE, fmt.Sprintf("%d", m.TotalPages))
+    return c.JSON(m.List)
+}
+
+// GetUserById
+//
+// @Tags Admin
+// @Produce json
+// @Security BearerAuth
+// @Param        adminId           path        string  true  "adminId"
+// @Success 200 {object} model.AdminUser
+// @Router /adminId/{adminId} [get]
+func GetUserById(c fiber.Ctx) error {
+    adminId := c.Params("adminId")
+    id, _ := strconv.ParseInt(adminId, 10, 64)
+    o, err := adminUserSvc.FindWithAssignBranchByAdminId(id)
+    if err != nil {
+        return err
+    }
+
+    if o == nil {
+        return fiber.NewError(fiber.StatusNotFound, "User not found")
+    }
+
+    return c.JSON(o)
 }
